<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_matching</name>
  <version>0.0.1</version>
  <description>The mapping package</description>
  <maintainer email="rsasaki@gmail.com">sasaki</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
